@@ -13,6 +13,7 @@
   - fix native object return bug
   - in runtime, string type become byte array type
   - support isa numeric type and value type
+  - improve syntax error messege to know the right error character
 0.0404 2018-12-18
   - support ascii escape '\x1F' syntax in character literal
   - support string literal excape character '\0' '\a'
